# wg_dart

./: pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
lib/: adapter_status.dart  wireguard_dart.dart  wireguard_dart_method_channel.dart  wireguard_dart_platform_interface.dart
test/: wireguard_dart_method_channel_test.dart  wireguard_dart_test.dart
windows/: CMakeLists.txt  connection_status.cpp  connection_status.h  network_adapter_status_observer.cpp  network_adapter_status_observer.h  wireguard_adapter.cpp  wireguard_adapter.h  wireguard_config_parser.cpp  wireguard_config_parser.h  wireguard_dart_plugin.cpp  wireguard_dart_plugin.h  wireguard_library.cpp  wireguard_library.h  wireguard_network_config.cpp  wireguard_network_config.h
